Bug 79239 - Pivot Table window can not be closed with the close button of *window manager* (the X at the top of the window)
Summary: Pivot Table window can not be closed with the close button of *window manager...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta1
Hardware: All All
: medium minor
Assignee: Katarina Behrens
URL:
Whiteboard: target:4.5.0 target:4.4.2 target:4.3.7
Keywords: bibisected, bisected, regression
: 88107 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-26 05:46 UTC by Kevin Suo
Modified: 2015-12-17 08:14 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2014-05-26 05:46:54 UTC
Pivot Table window can not be closed with the close button of window manager.

Steps:
1. Create a new Pivot Table in Calc.
2. Try to close the pivot table window using the desktop window manager "close" button.

Current Behaviour:
The pivot table window can not be closed (no reaction when closing the "close" button/icon. 
However, it can be closed using the libreoffice "_Close" botton (located at the right-botton corner).

OS: windows xp SP3
Version: 4.3.0.0.beta1
Build ID: b7cfa1eab1cb1e94f71d6df6612b73f231d0bf92
Comment 1 Kevin Suo 2014-05-27 14:46:01 UTC
I can also reproduce this in Ubuntu 14.04 x86, so set platform to ALL.
Comment 2 Yousuf Philips (jay) (retired) 2014-05-27 15:11:47 UTC
It worked for me in Windows XP SP3 and Linux Mint with 4.3 beta.
Comment 3 Firas Hanife 2014-05-27 15:17:19 UTC
Reproduced on openSUSE 13.1 (KDE) with 4.3.0.0.beta1.
The X button does not close the window "Pivot Table Layout", while maximize and minimize work as expected.
Comment 4 Joel Madero 2014-05-27 15:17:28 UTC
Ubuntu 14.04 x64
Unity
LibreOffice 4.3 beta1 - broken
LibreOffice 4.2.4.2 release - works


New
Trivial - not affecting anything - you can still push "cancel" to get same result of closing dialog.
Low - bumped up from lowest since it is a regression


regression
bibisectrequest
Comment 5 Yousuf Philips (jay) (retired) 2014-05-27 15:55:48 UTC
Confirmed in Linux Mint. I was doing it wrong. I was clicking the 'X' on the 'select source' dialog. :)
Comment 6 Kohei Yoshida 2014-05-30 00:45:26 UTC
The buttons will be OK and Cancel in the next release for other reasons.  So, we will not have the Close button anymore.

So, make sure when hitting Cancel in beta2 the dialog closes.
Comment 7 Kevin Suo 2014-05-30 00:57:38 UTC
(In reply to comment #6)
> The buttons will be OK and Cancel in the next release for other reasons. 
> So, we will not have the Close button anymore.
> 
> So, make sure when hitting Cancel in beta2 the dialog closes.

This bug is regarding the "window manager" close button/icon (the X at the top of the window), not the OK/Close/Cancle botton of libreoffice itself.

Sorry for the unclear bug description.
Comment 8 Joel Madero 2014-05-30 02:42:10 UTC
Definitely the new dialog:
 dadae0637bb115bea06819114fb44b7a07427454 is the first bad commit
commit dadae0637bb115bea06819114fb44b7a07427454
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon May 12 06:03:39 2014 +0000

    source-hash-b850adf13ec8fad5f1e49c06fbb1d81a546b4636
    
    commit b850adf13ec8fad5f1e49c06fbb1d81a546b4636
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Sun Mar 30 21:24:11 2014 +0100
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Mon Mar 31 09:23:16 2014 +0100
    
        coverity#1194932 Uncaught exception
    
        Change-Id: Ia1811b7ec040887079d90ac611316983c1e77b03

:100644 100644 2b97253caaebce49796158e46b92b962e5f4d0d6 bb736fb5752bda1bacc6ec276d7d3f7bd380f49c M	ccache.log
:100644 100644 b5989981b23d9e35cef03404d359646680c3f53f ed5c673b198e035fc65a0bc578ad62f2c7ec6307 M	commitmsg
:100644 100644 a705f30d0fbe6cd72efa42d0566f839ee864fc6e d7980b8aacbf0cc847fbb15e1f3b6a1103bf0ed5 M	make.log
:040000 040000 d4928135aad07203259ca870a67ecf4e3dc9f6a4 8a7724d6975b56c9b75615ea793832896263d305 M	opt


# bad: [a92705c1fabafddd43d175a0714855cd22551232] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [6ab7f53af36f13bbefdd4e4fcbd3d1ea432a77d9] source-hash-22029c7e17b4cb48acb058d47ec9c3b6b8b6b294
git bisect start 'latest' 'oldest'
# good: [bebf9d31c8fe9de96798484288a0fffc4d54917d] source-hash-09e5de8278dd8f13adcf614db35c8a8a04ba8e47
git bisect good bebf9d31c8fe9de96798484288a0fffc4d54917d
# bad: [fac643700ecfabc737836bbed068776f34037d53] source-hash-40a61d93ade494fa98c23a9fd8776c8dadf8f30f
git bisect bad fac643700ecfabc737836bbed068776f34037d53
# good: [d97d068402198fd528087c954ff8bf7fc2380a77] source-hash-3d1b1eea83703919c43620f9adef05e5b24c4bed
git bisect good d97d068402198fd528087c954ff8bf7fc2380a77
# good: [4bf5bbc5af411318f6507cbd13c220069da40347] source-hash-e9509e54b45fc429a93975917dca2ec343e5f48d
git bisect good 4bf5bbc5af411318f6507cbd13c220069da40347
# bad: [c3ba84995b61206749be6ce559d2155fbd13bb3c] source-hash-49a96a4d38ed144f6d05a0d2d8a83c2cee52b304
git bisect bad c3ba84995b61206749be6ce559d2155fbd13bb3c
# bad: [ff6ae148046c9722df3b48958a1222d9ea2ca69c] source-hash-7c4783f6a2cb7598ecc48f20379dad9784541d5b
git bisect bad ff6ae148046c9722df3b48958a1222d9ea2ca69c
# bad: [dadae0637bb115bea06819114fb44b7a07427454] source-hash-b850adf13ec8fad5f1e49c06fbb1d81a546b4636
git bisect bad dadae0637bb115bea06819114fb44b7a07427454
# good: [7dfffc61e9904d707278e707fe634f9c4b3e0174] source-hash-1ad901464afa29c96682bde59a12f864fccd525a
git bisect good 7dfffc61e9904d707278e707fe634f9c4b3e0174
# first bad commit: [dadae0637bb115bea06819114fb44b7a07427454] source-hash-b850adf13ec8fad5f1e49c06fbb1d81a546b4636
Comment 9 Kohei Yoshida 2014-06-20 01:11:21 UTC
(In reply to comment #7)
> (In reply to comment #6)
> > The buttons will be OK and Cancel in the next release for other reasons. 
> > So, we will not have the Close button anymore.
> > 
> > So, make sure when hitting Cancel in beta2 the dialog closes.
> 
> This bug is regarding the "window manager" close button/icon (the X at the
> top of the window), not the OK/Close/Cancle botton of libreoffice itself.
> 
> Sorry for the unclear bug description.

Still, it's worth checking this again after my change.  The behavior of the window manager's close button is handled by the presence of the Cancel button, which was absent prior to my change.

Test this with a more recent 4.3 release again and see if it's still there.
Comment 10 Kevin Suo 2014-06-20 01:35:59 UTC
(In reply to comment #9)
> Test this with a more recent 4.3 release again and see if it's still there.

I tested with 
4.3.0.1
Build ID: 67f5430184326974072b65403ef1d9d934fc4481

The bug behaviour is still there. The "X" icon of the window manager still does not close the window.
Comment 11 Kevin Suo 2014-06-20 01:38:11 UTC
(In reply to comment #9)

> Still, it's worth checking this again after my change.  The behavior of the
> window manager's close button is handled by the presence of the Cancel
> button, which was absent prior to my change.

The "Cancle" Button present in 4.3.0.1.
Comment 12 Kohei Yoshida 2014-06-23 17:58:15 UTC
(In reply to comment #11)
> (In reply to comment #9)
> 
> > Still, it's worth checking this again after my change.  The behavior of the
> > window manager's close button is handled by the presence of the Cancel
> > button, which was absent prior to my change.
> 
> The "Cancle" Button present in 4.3.0.1.

And?  How does the window manager's button behave?
Comment 13 Kevin Suo 2014-06-24 06:49:12 UTC
(In reply to comment #12)
> And?  How does the window manager's button behave?

Clicking on the window manager's "X" button has no reaction, it does not close the window.
Clicking on the libreoffice "Cancle" button closes the window as expected.

Thanks
Comment 14 Kohei Yoshida 2014-08-02 01:15:16 UTC
Try this again please.
Comment 15 Kevin Suo 2014-08-02 03:16:19 UTC
(In reply to comment #14)
> Try this again please.

Hi  Kohei, it's the same behaviour with 4.3.0.4, ubuntu 14.04 x64:
clicking on windows manager close button has no reaction; clicking on the libreoffice "Cancel" button closes the dialog successfully.
Comment 16 Kevin Suo 2014-08-02 07:45:58 UTC
Still the same bug behaviour with:

Version: 4.4.0.0.alpha0+
Build ID: 8cb75e905cef50a2d8a423443d3dcef5f1899027
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-07-30_04:47:13
Comment 17 Kevin Suo 2014-10-21 04:22:36 UTC
Still the same bug behaviour, pivot table dialog can not be closed by clicking the "X" button of window manager.

Version: 4.3.3.1
Build ID: 7d55112667c8fcddb67bc3803796b46c93aa56b0
Windows 7 X64.
Comment 18 Matthew Francis 2015-01-06 11:17:36 UTC
The behaviour changed as of the below commit.

Adding a Cc: to quikee@gmail.com. Could you possibly take a look at this? Thanks


commit 4f1f8b8e993b98095bf50c9e432fb0400d318b1f
Author: Tomaž Vajngerl <tomaz.vajngerl@collabora.com>
Date:   Sun Mar 30 21:12:27 2014 +0200

    pivot: new pivot table layout dialog
    
    This commit adds a new pivot table layout dialog which was implemented
    from scratch. Instead of custom controls this one uses list boxes
    for field entries which greatly reduces the code. It also fixes
    some visual and behaviour bugs and adds the possibility to edit the
    "Data" field.
    
    Change-Id: I6c01252acee5a2e8910e40e65904504d00e03057
Comment 19 Katarina Behrens 2015-02-09 17:12:23 UTC
*** Bug 88107 has been marked as a duplicate of this bug. ***
Comment 20 Commit Notification 2015-02-10 22:48:08 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0dda7929f7a358311aec91e6a742620fe2f0df26

tdf#79239: make the dialog closable with 'X' button again

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2015-02-11 21:31:45 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bd50ecbb99d023e330a1b0e929370d883c5c9f3b&h=libreoffice-4-4

tdf#79239: make the dialog closable with 'X' button again

It will be available in 4.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2015-02-11 21:33:22 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bd472c8a91976cda5fc5a45fccd2c782c6d44e73&h=libreoffice-4-3

tdf#79239: make the dialog closable with 'X' button again

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 23 Robinson Tryon (qubit) 2015-12-17 08:14:50 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]