tdf#79239: make the dialog closable with 'X' button again

that one of window manager, top-right corner mostly. We need to
reimplement Close() method for this class - I don't quite get why
this has to be the case, but all classes derived from ScAnyRefDlg
do it as well.

Change-Id: I3e94b7ee09f9b3581d054818d36ea4fb0fd55f78